fixed deplo yaml to exclude infra files

--- a/.github/workflows/deploy-s3-cf.yml
+++ b/.github/workflows/deploy-s3-cf.yml
@@ -4,12 +4,11 @@ on:
   push:
     branches:
       - main  # deploy when code is pushed to the main branch
-    # Remove paths if you want to trigger on any change
     paths:
-    - 'assets/**'  
-    - '**/*.html'
-    - '**/*.js'
-    - '**/*.css'
+      - 'assets/**'  
+      - '**/*.html'
+      - '**/*.js'
+      - '**/*.css'
 
 jobs:
   build:
@@ -25,17 +24,23 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'eu-west-3'  # Corrected to aws-region
+          aws-region: 'eu-west-3'
 
       # Debugging
       - name: Print Bucket Name
         run: |
           echo "Deploying to S3 Bucket"
 
-      # Sync files with S3
+      # Sync files with S3 (only include the required files)
       - name: Deploy to S3
         run: |
-          aws s3 sync ./ s3://${{ secrets.AWS_BUCKET_NAME }} --exclude ".git/*" --delete
+          aws s3 sync ./ s3://${{ secrets.AWS_BUCKET_NAME }} \
+            --exclude "*" \
+            --include "assets/**" \
+            --include "**/*.html" \
+            --include "**/*.js" \
+            --include "**/*.css" \
+            --delete
 
       # Optional: Invalidate CloudFront cache (if using CloudFront)
       - name: Invalidate CloudFront cache
